Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89597

windeploy fails to link with qtnamespace specified

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.0.1, 6.1.0 Alpha
    • 6.0.0
    • None
    • Windows 10 / msvc 19.23
    • Windows
    • ae89f19384c526d4285ab92b1b7382cc90949767 (qt/qttools/dev) cd1c8a0ae057ecf6f77e7e3d61713aa79c54b139 (qt/qttools/6.0)

    Description

      windeployqt fails to link when a custom qt namespace was specified using "-qtnamespace MyNamespace" (configure.bat):

      MSVCRT.lib(exe_main.obj) : error LNK2019: unresolved external symbol main referenced in function "int __cdecl __scrt_common_main_seh(void)" (?__scrt_common_main_seh@@YAHXZ)
        Hint on symbols that are defined and could potentially match:
          "int __cdecl MyNamespace::main(int,char * *)" (?main@MyNamespace@@YAHHPEAPEAD@Z)

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-89597
          # Subject Branch Project Status CR V

          Activity

            People

              kleint Friedemann Kleint
              mxstx Markus Stögerer
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes