windeployqt: Fix namespaced builds

Namespaced builds did not apply to windeployqt
since it was a host tool in 5.15. This now breaks
with cmake.

Move main() outside the Qt namespace.

Fixes: QTBUG-89597
Change-Id: If97f509a150ffb889a778c1436ef59395c63852a
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit ae89f19384c526d4285ab92b1b7382cc90949767)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>