src/windeployqt/main.cpp
@@ -1607,6 +1607,10 @@ static bool deployWebEngineCore(const QMap<QString, QString> &qmakeVariables,
                       options.updateFileFlags, options.json, errorMessage);
 }
 
+QT_END_NAMESPACE
+
+QT_USE_NAMESPACE
+
 int main(int argc, char **argv)
 {
     QCoreApplication a(argc, argv);
@@ -1688,5 +1692,3 @@ int main(int argc, char **argv)
 
     return 0;
 }
-
-QT_END_NAMESPACE
